new moon cacao ecstatic dance

--- a/content/en/news/14.newmooncacaoecstaticsimplybe.md
+++ b/content/en/news/14.newmooncacaoecstaticsimplybe.md
@@ -1,24 +1,24 @@
 ---
 isNews: true
 language: en
-title: "Full Moon ~ Cacao ~ Ecstatic Dance"
-description: Join us on Sunday afternoon 25 February at Simply Be in Brakel
-date: 02/20/2024
+title: "New Moon ~ Cacao ~ Ecstatic Dance"
+description: Join us on Sunday afternoon 9 March at Simply Be in Brakel
+date: 02/11/2025
 author: Wouter Vernaillen
-thumbnail: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
+thumbnail: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-header.jpg
 header:
-    image: /images/news/fullmoonsimplybe/fullmoon25febsimplybe-header.png
+    image: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-header.jpg
 ogImage:
     props:
-        image: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
+        image: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-header.jpg
 category: ecstatic
 ---
 
 :::div{.col-left}
 
-# Full Moon ~ Cacao ~ Ecstatic Dance
+# New Moon ~ Cacao ~ Ecstatic Dance
 
-Come and enjoy our Volle Maan ~ Cacao ~ Ecstatic Dance with us on 25 February from 3pm!
+Come and enjoy our Volle Maan ~ Cacao ~ Ecstatic Dance with us on 9 March from 1pm!
 
 Together, under the guidance of Sandrine, we ceremoniously connect with the Cacao medicine and place our intentions.
 DJ Harmonics then takes us on a compelling, ecstatic dance journey with shamanic, tribal and southern sounds from all over the world!
@@ -29,6 +29,11 @@ Cocoa is a gentle medicine that, among other things, opens the heart. It provide
 
 :HorizontalRule{category=ecstatic}
 
+## Where?
+[Simply Be](https://www.simply-be.be/)<br>
+Daalpad (all the way down on the right)<br>
+9660 Brakel
+
 ## Energetic exchange?
 €33 to €44 according to what is possible and feels good for you.
  
@@ -36,26 +41,21 @@ Cocoa is a gentle medicine that, among other things, opens the heart. It provide
 
 Registrations: info@simply-be.be
 
-[Facebook event :HIcon{name=i-mdi-facebook}](https://www.facebook.com/events/701592842119282?acontext=%7B%22event_action_history%22%3A%5B%5D%7D)
+[Facebook event :HIcon{name=i-mdi-facebook}](https://www.facebook.com/events/9196375910439881){target="_blank"}
 
 :::
 :::div{.col-right}
 
 ::FloatingImage
 ---
-src: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
+src: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-flyer.jpg
 width: 618
-height: 412
+height: 618
 cssClass: full
 caption: Simply Be
 captionUrl: https://www.simply-be.be/
 ---
 ::
-
-## Where?
-[Simply Be](https://www.simply-be.be/)<br>
-Daalpad (all the way down on the right)<br>
-9660 Brakel
 
 ## What to bring?
 - an empty stomach so you can fully enjoy the Cacao
