--- a/content/news/14.newmooncacaoecstaticsimplybe.md
+++ b/content/news/14.newmooncacaoecstaticsimplybe.md
@@ -1,33 +1,38 @@
 ---
 isNews: true
 language: nl
-title: "Volle Maan ~ Cacao ~ Ecstatic Dance"
-description: Kom mee genieten op zondagnamiddag 25 februari vanaf 15u bij Simply Be in Brakel
-date: 02/20/2024
+title: "Nieuwe Maan ~ Cacao ~ Ecstatic Dance"
+description: Kom op zondagnamiddag, 9 maart, genieten van onze Nieuwe Maan ~ Cacao ~ Ecstatic Dance!
+date: 02/11/2025
 author: Wouter Vernaillen
-thumbnail: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
+thumbnail: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-header.jpg
 header:
-    image: /images/news/fullmoonsimplybe/fullmoon25febsimplybe-header.png
+    image: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-header.jpg
 ogImage:
     props:
-        image: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
+        image: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-header.jpg
 category: ecstatic
 ---
 
 :::div{.col-left}
 
-# Volle Maan ~ Cacao ~ Ecstatic Dance
+# Nieuwe Maan ~ Cacao ~ Ecstatic Dance
 
-Kom op zondagnamiddag, 25 februari vanaf 15u, genieten van onze Volle Maan ~ Cacao ~ Ecstatic Dance!
+Kom op zondagnamiddag, 9 maart, genieten van onze Nieuwe Maan ~ Cacao ~ Ecstatic Dance!
 
 Samen verbinden we, onder begeleiding van Sandrine, ceremonieel met het Cacao medicijn en plaatsen we onze intenties. 
-Vervolgens neemt DJ Harmonics ons mee op een meeslepende, extatische dansreis met sjamanistische, tribal en zuiderse klanken van over heel de wereld!
 
+Vervolgens neemt DJ Harmonics ons mee op een meeslepende, extatische dansreis met sjamanistische, tribal en zuiderse klanken van over heel de wereld!
 DJ Harmonics (Wouter Vernaillen) combineert trancedans en soundhealing kennis met dj skills uit een vorig leven. Naast het faciliteren van trancedans verzorgt hij graag live dj-sets voor Ecstatic Dance.
 
 Cacao is een zacht medicijn dat onder andere het hart opent. Het zorgt voor een warm en energiek gevoel waar er ruimte is om bewust in het hier en nu aanwezig te zijn. Bovendien heeft het tal van positieve werkingen op het zelfhelende vermogen van het lichaam.
 
 :HorizontalRule{category=ecstatic}
+
+## Waar?
+Te [Simply Be](https://www.simply-be.be/)<br>
+Daalpad (helemaal beneden rechts)<br>
+9660 Brakel
 
 ## Energetische uitwisseling?
 Van 33€ tot 44€ volgens wat voor jou mogelijk is en goed voelt.
@@ -36,33 +41,26 @@ Van 33€ tot 44€ volgens wat voor jou mogelijk is en goed voelt.
 
 Inschrijvingen: info@simply-be.be
 
-[Facebook evenement :HIcon{name=i-mdi-facebook}](https://www.facebook.com/events/701592842119282?acontext=%7B%22event_action_history%22%3A%5B%5D%7D)
+[Facebook evenement :HIcon{name=i-mdi-facebook}](https://www.facebook.com/events/9196375910439881){target="_blank"}
 
 :::
 :::div{.col-right}
 
 ::FloatingImage
 ---
-src: /images/news/fullmoonsimplybe/fullmoon25febsimplybe.png
+src: /images/news/newmoonsimplybe9mar25/newmoon9mar25simplybe-flyer.jpg
 width: 618
-height: 412
+height: 618
 cssClass: full
 caption: Simply Be
 captionUrl: https://www.simply-be.be/
 ---
 ::
 
-## Waar?
-Te [Simply Be](https://www.simply-be.be/)<br>
-Daalpad (helemaal beneden rechts)<br>
-9660 Brakel
-
 ## Wat meebrengen?
 - een lege maag zodat je volop kan genieten van de Cacao
 - een dekentje om jezelf te bedekken voor de rustige integratie erna
 - een open hart en geest voor deze diepgaande reis naar zelfexpressie, heling en verbinding
-
-Er wordt voorzien in water en thee…
 
 :HorizontalRule{category=ecstatic}
 
